# NERE_2D

./: .gitignore  CMakeLists.txt  KFun.cpp  KFun.h  README.md  Richards.cpp  Richards.h  global.h  hysteresis.cpp  hysteresis.h  inputs.txt  main.cpp  melt.cpp  melt.h  plot_outputs.m  theta_2Dprofile.avi
